fix text overflow for listing title

--- a/client/src/styles/details.scss
+++ b/client/src/styles/details.scss
@@ -22,6 +22,7 @@
     letter-spacing: 0.2px;
     word-wrap: break-word;
     color: #484848;
+    overflow: hidden;
   }
 
   .row-price {
